--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>CSCE 190: [Keith Crase]</title>
+    <title>CSCE 190: Keith Crase</title>
   </head>
   <body>
-    <h1>[Keith Crase]</h1>
+    <h1>Keith Crase</h1>
+    <section class="assign">
+      <img src="images/problem-statement.jpg" />
+      <section class="assign-det">
+        <h2>Problem statement: School Gym</h2>
+        <p>
+          The school gym is often too crowded. Students are frustrated because many of the machines and equipment are often already being used, and there is no way to tell how busy the gym is before they leave. Our solution is to provide the user with a way to tell how busy the school gym is.
+        </p>
+      </section>
+    </section>
   </body>
 </html>
