--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <body>
     <h1>Keith Crase</h1>
     <section class="assign">
-      <img src="images/problem-statement.jpg" />
+      <img src="CSCE190 Problem Statement.pdf" />
       <section class="assign-det">
         <h2>Problem statement: School Gym</h2>
         <p>
