--- a/index.html
+++ b/index.html
@@ -14,5 +14,13 @@
         </p>
       </section>
     </section>
+    <!--Affinity diagram assignment-->
+    <section class="assign">
+      <img src="images/affinity-diagram.pdf" />
+      <section class="assign-det">
+        <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
+        <p>
+          TEXT
+        </p>
   </body>
 </html>
