--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     </section>
     <!--Affinity diagram assignment-->
     <section class="assign">
-      <img src="images/affinity-diagram.pdf" />
+      <img src="images/affinity-diagram.jpg" />
       <section class="assign-det">
-        <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
+        <a href="images/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
         <p>
           TEXT
         </p>
