--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="assign">
       <img src="images/affinity-diagram.jpg" />
       <section class="assign-det">
-        <a href="images/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
+        <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
         <p>
           TEXT
         </p>
