--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <section class="assign">
       <img src="images/ProblemStatement.jpg" />
       <section class="assign-det">
-        <h2>Problem statement: School Gym</h2>
+        <h2>Problem statement: Overcrowded School Gym</h2>
         <p>
           The school gym is often too crowded. Students are frustrated because many of the machines and equipment are often already being used, and there is no way to tell how busy the gym is before they leave. Our solution is to provide the user with a way to tell how busy the school gym is.
         </p>
@@ -20,7 +20,7 @@
       <section class="assign-det">
         <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: </h2></a>
         <p>
-          TEXT
+          The affinity diagram demonstrates the six core aspects of our solution to overcrowding at the gym: Design, Features, Notifications/Permissions, Growth, Tabs, and Problems. By addressing the ideas and concerns in the key concepts provided, the effect of overcrowding will be mitigated through our mobile app.
         </p>
       </section>
     </section>
