--- a/index.html
+++ b/index.html
@@ -24,5 +24,15 @@
         </p>
       </section>
     </section>
+    <!-- Personas assignment -->
+      <section class="assign">
+        <img src="images/my-persona.jpg" />
+        <section class="assign-det">
+          <a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a>
+          <p>
+            John Naas: An experienced educator who wishes to exercise on campus. "My students come first in everything I do."
+          </p>
+        </section>
+      </section>
   </body>
 </html>
