--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </section>
     <!-- Personas assignment -->
       <section class="assign">
-        <img src="images/my-persona.jpg" />
+        <img src="images/Persona190.jpg" />
         <section class="assign-det">
-          <a href="files/all-personas.pdf"><h2>Team Personas: [title]</h2></a>
+          <a href="files/Personas.pdf"><h2>Team Personas: Gym Availability</h2></a>
           <p>
             John Naas: An experienced educator who wishes to exercise on campus. "My students come first in everything I do."
           </p>
