--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>CSCE 190: Keith Crase</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="files/styles.css" />
   </head>
   <body>
     <h1>Keith Crase</h1>
