--- a/index.html
+++ b/index.html
@@ -35,5 +35,15 @@
           </p>
         </section>
       </section>
+    <!-- Storyboard assignment -->
+      <section class="assign">
+        <img src="images/my-storyboard.jpg" />
+        <section class="assign-det">
+          <a href="files/all-storyboards.pdf"><h2>Team Storyboards: Storyboards: Fitness App</h2></a>
+          <p>
+            Storyboards depicting various staff and students at a college using a fitness app to check the availability of the local gym equipment.
+         </p>
+       </section>
+     </section>
   </body>
 </html>
