--- a/index.html
+++ b/index.html
@@ -53,15 +53,34 @@
       <section class="assign">
         <img src="images/Sketch.jpg" />
         <section class="assign-det">
-          <a href="files/190 Sketches Merged.pdf"><h2>Team Sketches: [title]</h2></a>
+          <a href="files/190 Sketches Merged.pdf"><h2>Team Sketches: Gym App</h2></a>
           <p>
             Each team member drew at least 3 sketches for our mobile app. Each of the sketches are a possible implementation of the School Gym app. We then decided which sketch would be the best possible design for our app.
         </p>
       </section>
     </section>
 
+    <!-- Paper prototype assignment -->
+      <section class="assign">
+        <img src="190 Paper Prototype.jpg" />
+        <section class="assign-det">
+          <a href="https://www.youtube.com/watch?v=47TQqaH5dQs"><h2>Team Paper Prototype: Gym App</h2></a>
+          <p>
+            A video showcasing the user interface and features of the School Gym app through a paper prototype.
+          </p>
+        </section>
+      </section>
 
-
+    <!-- Hi-Fi prototype assignment -->
+      <section class="assign">
+        <img src="images/team-prototype.png" />
+        <section class="assign-det">
+          <a href="https://youtu.be/dQw4w9WgXcQ"><h2>Team Hi-Fi Prototype: [title]</h2></a>
+            <p>
+              [Insert text describing your team high fidelity prototype]
+          </p>
+        </section>
+      </section>
     
   </body>
 </html>
