--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
 
     <!-- Hi-Fi prototype assignment -->
       <section class="assign">
-        <img src="images/team-prototype.png" />
+        <img src="images/HiFi-prototype.jpg" />
         <section class="assign-det">
-          <a href="https://youtu.be/dQw4w9WgXcQ"><h2>Team Hi-Fi Prototype: [title]</h2></a>
+          <a href="https://www.youtube.com/watch?v=fQ7Z5negZIU"><h2>Team Hi-Fi Prototype: [title]</h2></a>
             <p>
-              [Insert text describing your team high fidelity prototype]
+              This is the funcitoning app that gives input on how crowded either gym at USC is at certain times and helps you keep progress on your gym and weight loss/gain journey.
           </p>
         </section>
       </section>
