--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
     <!-- Paper prototype assignment -->
       <section class="assign">
-        <img src="190 Paper Prototype.jpg" />
+        <img src="190 Paper Prototype.png" />
         <section class="assign-det">
           <a href="https://www.youtube.com/watch?v=47TQqaH5dQs"><h2>Team Paper Prototype: Gym App</h2></a>
           <p>
@@ -73,7 +73,7 @@
 
     <!-- Hi-Fi prototype assignment -->
       <section class="assign">
-        <img src="images/HiFi-prototype.jpg" />
+        <img src="images/HiFi-prototype.png" />
         <section class="assign-det">
           <a href="https://www.youtube.com/watch?v=fQ7Z5negZIU"><h2>Team Hi-Fi Prototype: [title]</h2></a>
             <p>
