--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       <section class="assign">
         <img src="images/HiFi-prototype.png" />
         <section class="assign-det">
-          <a href="https://www.youtube.com/watch?v=fQ7Z5negZIU"><h2>Team Hi-Fi Prototype: [title]</h2></a>
+          <a href="https://www.youtube.com/watch?v=fQ7Z5negZIU"><h2>Team Hi-Fi Prototype: Gym Companion App</h2></a>
             <p>
               This is the funcitoning app that gives input on how crowded either gym at USC is at certain times and helps you keep progress on your gym and weight loss/gain journey.
           </p>
