--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Hi-Fi prototype assignment -->
       <section class="assign">
-        <img src="images/HiFi-prototype.png" />
+        <img src="images/HiFi-Prototype.png" />
         <section class="assign-det">
           <a href="https://www.youtube.com/watch?v=fQ7Z5negZIU"><h2>Team Hi-Fi Prototype: Gym Companion App</h2></a>
             <p>
