--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
 
     <!-- Paper prototype assignment -->
       <section class="assign">
-        <img src="190 Paper Prototype.png" />
+        <img src="images/190 Paper Prototype.png" />
         <section class="assign-det">
           <a href="https://www.youtube.com/watch?v=47TQqaH5dQs"><h2>Team Paper Prototype: Gym App</h2></a>
           <p>
             A video showcasing the user interface and features of the School Gym app through a paper prototype.
-          </p>
-        </section>
+         </p>
       </section>
+    </section>
 
     <!-- Hi-Fi prototype assignment -->
       <section class="assign">
